--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "grpc to websocket.",
   "scripts": {
+    "server": "ts-node ./src/grpc/server.ts",
+    "client": "ts-node ./src/grpc/client.ts",
     "format": "prettier --write \"**/*.ts\"",
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "build": "tsc -p tsconfig.json"
@@ -20,6 +22,7 @@
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
@@ -27,6 +30,7 @@
   },
   "dependencies": {
     "@grpc/proto-loader": "^0.4.0",
-    "grpc": "^1.18.0"
+    "grpc": "^1.18.0",
+    "pino": "^5.11.1"
   }
 }
