--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "grpc to websocket.",
   "scripts": {
     "server": "ts-node ./src/grpc/server.ts",
-    "client": "ts-node ./src/grpc/client.ts",
+    "client": "ts-node ./src/demo.ts",
     "format": "prettier --write \"**/*.ts\"",
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "build": "tsc -p tsconfig.json"
@@ -18,6 +18,8 @@
   "author": "AlfieriChou <alfierichou@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/socket.io": "^2.1.2",
+    "@types/socket.io-client": "^1.4.32",
     "husky": "^1.3.1",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
@@ -31,6 +33,8 @@
   "dependencies": {
     "@grpc/proto-loader": "^0.4.0",
     "grpc": "^1.18.0",
-    "pino": "^5.11.1"
+    "pino": "^5.11.1",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   }
 }
