--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ws": "ts-node ./src/wsDemo.ts",
     "format": "prettier --write \"**/*.ts\"",
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -p tsconfig.json",
+    "test": "jest --coverage --detectOpenHandles --forceExit"
   },
   "husky": {
     "hooks": {
@@ -19,13 +20,16 @@
   "author": "AlfieriChou <alfierichou@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^24.0.9",
     "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32",
     "husky": "^1.3.1",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "reflect-metadata": "^0.1.13",
+    "ts-jest": "^24.0.0",
     "ts-node": "^8.0.2",
+    "tsconfig-paths": "^3.8.0",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
@@ -34,6 +38,7 @@
   "dependencies": {
     "@grpc/proto-loader": "^0.4.0",
     "grpc": "^1.18.0",
+    "jest": "^24.1.0",
     "pino": "^5.11.1",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
