--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "server": "ts-node ./src/app.ts",
     "client": "ts-node ./src/client.ts",
-    "ws": "ts-node ./src/wsDemo.ts",
+    "ws": "ts-node ./src/ws.ts",
+    "proto": "node ./bin/proto.js",
     "format": "prettier --write \"**/*.ts\"",
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "build": "tsc -p tsconfig.json",
@@ -20,27 +21,30 @@
   "author": "AlfieriChou <alfierichou@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^24.0.9",
-    "@types/socket.io": "^2.1.2",
-    "@types/socket.io-client": "^1.4.32",
-    "husky": "^1.3.1",
-    "prettier": "^1.16.4",
-    "pretty-quick": "^1.10.0",
-    "reflect-metadata": "^0.1.13",
-    "ts-jest": "^24.0.0",
-    "ts-node": "^8.0.2",
-    "tsconfig-paths": "^3.8.0",
-    "tslint": "^5.12.1",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.3.3"
+    "@types/jest": "24.0.9",
+    "@types/socket.io": "2.1.2",
+    "@types/socket.io-client": "1.4.32",
+    "grpc-tools": "1.7.1",
+    "grpc_tools_node_protoc_ts": "2.5.0",
+    "husky": "1.3.1",
+    "prettier": "1.16.4",
+    "pretty-quick": "1.10.0",
+    "reflect-metadata": "0.1.13",
+    "rimraf": "2.6.3",
+    "shelljs": "0.8.3",
+    "ts-jest": "24.0.0",
+    "ts-node": "8.0.2",
+    "tsconfig-paths": "3.8.0",
+    "tslint": "5.12.1",
+    "tslint-config-prettier": "1.18.0",
+    "tslint-plugin-prettier": "2.0.1",
+    "typescript": "3.3.3"
   },
   "dependencies": {
-    "@grpc/proto-loader": "^0.4.0",
-    "grpc": "^1.18.0",
-    "jest": "^24.1.0",
-    "pino": "^5.11.1",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "grpc": "1.18.0",
+    "jest": "24.1.0",
+    "pino": "5.11.1",
+    "socket.io": "2.2.0",
+    "socket.io-client": "2.2.0"
   }
 }
