--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "jest": "24.1.0",
     "pino": "5.11.1",
     "socket.io": "2.2.0",
-    "socket.io-client": "2.2.0"
+    "socket.io-client": "2.2.0",
+    "winston": "3.2.1",
+    "winston-daily-rotate-file": "3.8.0"
   }
 }
