--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
   "author": "AlfieriChou <alfierichou@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/async": "^3.0.1",
     "@types/jest": "24.0.9",
     "@types/socket.io": "2.1.2",
     "@types/socket.io-client": "1.4.32",
-    "grpc-tools": "1.7.1",
+    "grpc-tools": "^1.8.0",
     "grpc_tools_node_protoc_ts": "2.5.0",
     "husky": "1.3.1",
     "prettier": "1.16.4",
@@ -38,9 +39,10 @@
     "tslint": "5.12.1",
     "tslint-config-prettier": "1.18.0",
     "tslint-plugin-prettier": "2.0.1",
-    "typescript": "3.3.3"
+    "typescript": "3.6.2"
   },
   "dependencies": {
+    "async": "^3.1.0",
     "grpc": "1.18.0",
     "jest": "24.1.0",
     "pino": "5.11.1",
